# EU4ToVic2

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  EU4ToVic2-Installer.iss  EU4ToVic2.sln  README.md  appveyor.yml  bar  build_EU4ToVic2_release.bat  build_EU4ToVic2_release.sh  build_linux.sh  build_linux_foreign.sh  compile.ps1
EU4toV2/: CMakeLists.txt  Copy_Files.bat  Copy_Files.sh  Copy_Files_Debug.bat  EU4ToV2.vcxproj  EU4ToV2.vcxproj.filters  test.bat  test_all_saves.bat
EU4toV2/Data_Files/: Eu4ToVic2DefaultConfiguration.xml  FAQ.txt  ReadMe.txt  SupportedConvertersDefault.xml  after_converting.txt  blocked_tech_schools.txt  building_mappings.txt  ck2titleMap.txt  colonial_flags.txt  colonial_tags.txt  configuration.txt  configuration_l_english.yml  configuration_l_french.yml  configuration_l_german.yml  configuration_l_italian.yml  configuration_l_latin.yml  configuration_l_russian.yml  country_mappings.txt  cultureMap.txt  fronter-configuration.txt  fronter-options.txt  governmentMapping.txt  idea_effects.txt  leader_traits.txt  merge_nations.txt  minorityPops.txt  nationals.txt  options_l_english.yml  options_l_french.yml  options_l_german.yml  options_l_italian.yml  options_l_latin.yml  options_l_russian.yml  partyNames.txt  province_mappings.txt  reformMapping.txt  reform_effects.txt  regiment_costs.txt  religionMap.txt  slaveCultureMap.txt  (+5 more)
EU4toV2/Data_Files/alternativeFonts/: gfx-polish.rar  gfx-russian.rar
EU4toV2/Data_Files/configurables/: EU4_HPM_province_mappings.txt  HPM_province_mappings.txt  Voltaire's Nightmare_province_mappings.txt  africa_reset.txt  agreement_types.txt  blocked_tech_schools.txt  ck2_title_map.txt  colonial_tags.txt  country_mappings.txt  culture_definitions.txt  culture_group_map.txt  culture_map.txt  culture_map_slaves.txt  deadDefinitions.txt  dead_definitions.txt  government_mapping.txt  idea_effects.txt  leader_traits.txt  merge_nations.txt  nationals.txt  party_blobs.txt  party_names.txt  pop_shaping.txt  port_provinces.txt  port_whitelist.txt  province_mappings.txt  province_renamings.txt  reform_effects.txt  relationship_types.txt  religion_definitions.txt  religion_map.txt  rgo_events.txt  starting_factories.txt  starting_technologies.txt  subject_types.txt  tech_groups.txt  title_map.txt  union_tags.txt  unions.txt  unreleasable_tags.txt  (+5 more)
EU4toV2/Data_Files/configurables/HPM/: country_mappings.txt  culture_definitions.txt  culture_map.txt  culture_map_slaves.txt  dead_definitions.txt  province_mappings.txt  reforms.txt  religion.txt  tech_groups.txt  (+2 more)
EU4toV2/Data_Files/flags/: 00.txt  00dummy.txt  BDK_fascist.tga  BDK_monarchy.tga  BHP_communist.tga  BHP_fascist.tga  BHP_monarchy.tga  HTY_communist.tga  HTY_fascist.tga  HTY_monarchy.tga  HWK.tga  HWK_communist.tga  HWK_fascist.tga  HWK_republic.tga  KER_communist.tga  KER_fascist.tga  KER_monarchy.tga  KML_republic.tga  LNC.tga  LOI.tga  MSK.tga  MSK_communist.tga  MSK_fascist.tga  PAK_fascist.tga  PAK_monarchy.tga  PAK_republic.tga  RMN_fascist.tga  TMT_communist.tga  TMT_fascist.tga  TMT_monarchy.tga  c_aosta.tga  c_aosta_communist.tga  c_aosta_fascist.tga  c_aosta_monarchy.tga  c_aosta_republic.tga  c_mallorca.tga  c_mallorca_communist.tga  c_mallorca_fascist.tga  d_akershus_communist.tga  d_akershus_fascist.tga  (+21 more)
EU4toV2/Resources/: rakaly.dll.lib  workshope_description.txt
EU4toV2/Resources/workshop/: EU4toVic2.mod  workshop_description.txt
EU4toV2/Source/: Configuration.cpp  Configuration.h  EU4ToVic2Converter.h  EU4toV2Converter.cpp  FlagUtils.cpp  FlagUtils.h  main.cpp
EU4toV2/Source/EU4World/: Areas.h  ColonialRegions.cpp  Continents.cpp  Countries.cpp  Countries.h  CultureGroups.cpp  CultureGroups.h  DateItems.h  EU4Army.cpp  EU4Army.h  EU4Country.cpp  EU4Country.h  EU4GovernmentSection.cpp  EU4Leader.cpp  EU4Localisation.cpp  EU4Localisation.h  EU4Province.cpp  EU4Province.h  EU4Religion.cpp  EU4Version.cpp  EU4Version.h  ID.cpp  ID.h  ProvinceHistory.cpp  ProvinceHistory.h  Region.cpp  Regions.cpp  Regions.h  Religion.cpp  Religion.h  World.cpp  World.h
EU4toV2/Source/Helpers/: ReformProperties.cpp  ReformProperties.h  RgoShuffle.cpp  RgoShuffle.h  TechConversionHelpers.cpp  TechConversionHelpers.h  TechValues.cpp  TechValues.h  rakaly.h  rakaly_wrapper.h  targa.cpp
EU4toV2/Source/Mappers/: AdjacencyMapper.cpp  CK2TitleMapper.cpp  ColonialTag.cpp  ColonialTagsMapper.cpp  ColonialTagsMapper.h  Continents.cpp  CountryMapping.cpp  CountryMapping.h  CultureMapper.cpp  CultureMapper.h  CultureMapping.cpp  CultureMapping.h  CultureMappingRule.cpp  FlagColorMapper.cpp  FlagColorMapper.h  GovermentMapper.cpp  GovernmentMapper.h  IdeaEffectMapper.cpp  IdeaEffectMapper.h  MinorityPop.cpp  MinorityPop.h  MinorityPopMapper.cpp  MinorityPopMapper.h  PartyName.cpp  PartyName.h  PartyNameMapper.cpp  PartyNameMapper.h  ProvinceMapper.cpp  ProvinceMapper.h  ReformMapper.cpp  ReformMapper.h  RegimentCostsMapper.cpp  RegimentCostsMapper.h  ReligionMapper.cpp  ReligionMapper.h  ReligionMapping.cpp  ReligionMapping.h  SlaveCultureMapper.cpp  SlaveCultureMapper.h  StateMapper.cpp  (+13 more)
EU4toV2/Source/V2World/: BlockedTechSchools.cpp  BlockedTechSchools.h  StateMapper.cpp  StateMapper.h  V2Army.cpp  V2Army.h  V2Country.cpp  V2Country.h  V2Creditor.cpp  V2Creditor.h  V2Diplomacy.cpp  V2Diplomacy.h  V2Factory.cpp  V2Factory.h  V2Flags.cpp  V2Flags.h  V2Leader.cpp  V2Leader.h  V2Localisation.cpp  V2Localisation.h  V2Pop.cpp  V2Pop.h  V2Province.cpp  V2Province.h  V2Reforms.cpp  V2Reforms.h  V2Relations.cpp  V2Relations.h  V2State.cpp  V2State.h  V2TechSchools.cpp  V2TechSchools.h  V2UncivReforms.cpp  V2UncivReforms.h  V2World.cpp  V2World.h  Vic2CultureUnion.cpp  Vic2CultureUnionMapper.cpp  Vic2CultureUnionMapper.h  Vic2Regions.cpp  (+4 more)
ZipLib/: CMakeLists.txt  ZipFile.cpp  ZipLib.vcxproj
ZipLib/compression/lzma/: lzma_decoder.h  lzma_encoder_properties.h
ZipLib/detail/: ZipCentralDirectoryFileHeader.cpp  ZipLocalFileHeader.cpp
ZipLib/extlibs/bzip2/: bzip2.vcxproj
ZipLib/extlibs/lzma/: lzma.vcxproj  lzma.vcxproj.filters
ZipLib/extlibs/zlib/: zlib.vcxproj
(+2847 files in other folders)
