cmake_minimum_required(VERSION 3.5)
#set(CMAKE_VERBOSE_MAKEFILE on)

project(EU4ToVic2)
SET(CMAKE_CXX_COMPILER g++-7)
set(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/Source)
set(PROJECT_SOURCE_DIR ${CMAKE_SOURCE_DIR}/Source)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/Release-Linux)
set(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/Release-Linux)

add_compile_options("-std=c++17")
add_compile_options("-g")

include_directories("../common_items")
include_directories("${PROJECT_SOURCE_DIR}")

file(GLOB MAIN_SOURCES "${PROJECT_SOURCE_DIR}/*.cpp")
file(GLOB VIC2WORLD_SOURCES "${PROJECT_SOURCE_DIR}/V2World/*.cpp")
file(GLOB V2FACTORY_SOURCES "${PROJECT_SOURCE_DIR}/V2World/Factory/*.cpp")
file(GLOB V2LEADER_SOURCES "${PROJECT_SOURCE_DIR}/V2World/Leader/*.cpp")
file(GLOB V2COUNTRY_SOURCES "${PROJECT_SOURCE_DIR}/V2World/Country/*.cpp")
file(GLOB V2POPS_SOURCES "${PROJECT_SOURCE_DIR}/V2World/Pops/*.cpp")
file(GLOB V2MAP_SOURCES "${PROJECT_SOURCE_DIR}/V2World/Map/*.cpp")
file(GLOB V2RGORANDOMIZATION_SOURCES "${PROJECT_SOURCE_DIR}/V2World/RGORandomization/*.cpp")
file(GLOB HELPER_SOURCES "${PROJECT_SOURCE_DIR}/Helpers/*.cpp")
file(GLOB MAPPER_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/*.cpp")
file(GLOB MAPPER_IDEAS_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/Ideas/*.cpp")
file(GLOB MAPPER_PROVINCE_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/ProvinceMappings/*.cpp")
file(GLOB MAPPER_BUILDINGS_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/Buildings/*.cpp")
file(GLOB MAPPER_CULTUREGROUPS_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/CultureGroups/*.cpp")
file(GLOB MAPPER_CK2TITLES_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/CK2Titles/*.cpp")
file(GLOB MAPPER_COUNTRYMAPPINGS_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/CountryMappings/*.cpp")
file(GLOB MAPPER_ADJACENCY_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/Adjacency/*.cpp")
file(GLOB MAPPER_GEOGRAPHY_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/Geography/*.cpp")
file(GLOB MAPPER_COLONIALTAGS_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/ColonialTags/*.cpp")
file(GLOB MAPPER_COLONIALFLAGS_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/ColonialFlags/*.cpp")
file(GLOB MAPPER_CULTUREMAPPER_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/CultureMapper/*.cpp")
file(GLOB MAPPER_FLAGCOLORS_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/FlagColors/*.cpp")
file(GLOB MAPPER_GOVERNMENTMAPPER_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/GovernmentMapper/*.cpp")
file(GLOB MAPPER_MINORITYPOPS_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/MinorityPops/*.cpp")
file(GLOB MAPPER_PARTYNAMES_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/PartyNames/*.cpp")
file(GLOB MAPPER_REGIMENTCOSTS_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/RegimentCosts/*.cpp")
file(GLOB MAPPER_RELIGIONMAPPER_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/ReligionMapper/*.cpp")
file(GLOB MAPPER_UNITTYPES_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/UnitTypes/*.cpp")
file(GLOB MAPPER_STATEMAPPER_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/StateMapper/*.cpp")
file(GLOB MAPPER_BLOCKEDTECHSCHOOLS_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/BlockedTechSchools/*.cpp")
file(GLOB MAPPER_TECHSCHOOLS_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/TechSchools/*.cpp")
file(GLOB MAPPER_CULTURALUNIONS_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/CulturalUnions/*.cpp")
file(GLOB EU4_WORLD_SOURCES "${PROJECT_SOURCE_DIR}/EU4World/*.cpp")
file(GLOB EU4_COLONIALREGIONS_SOURCES "${PROJECT_SOURCE_DIR}/EU4World/ColonialRegions/*.cpp")
file(GLOB EU4_HISTORY_SOURCES "${PROJECT_SOURCE_DIR}/EU4World/History/*.cpp")
file(GLOB EU4_LEADER_SOURCES "${PROJECT_SOURCE_DIR}/EU4World/Leader/*.cpp")
file(GLOB EU4_RELATIONS_SOURCES "${PROJECT_SOURCE_DIR}/EU4World/Relations/*.cpp")
file(GLOB EU4_DIPLOMACY_SOURCES "${PROJECT_SOURCE_DIR}/EU4World/Diplomacy/*.cpp")
file(GLOB EU4_NATIONMERGER_SOURCES "${PROJECT_SOURCE_DIR}/EU4World/NationMerger/*.cpp")
file(GLOB EU4_MODS_SOURCES "${PROJECT_SOURCE_DIR}/EU4World/Mods/*.cpp")
file(GLOB EU4_MODIFIERS_SOURCES "${PROJECT_SOURCE_DIR}/EU4World/Modifiers/*.cpp")
file(GLOB EU4_PROVINCES_SOURCES "${PROJECT_SOURCE_DIR}/EU4World/Provinces/*.cpp")
file(GLOB EU4_REGIONS_SOURCES "${PROJECT_SOURCE_DIR}/EU4World/Regions/*.cpp")
file(GLOB EU4_COUNTRY_SOURCES "${PROJECT_SOURCE_DIR}/EU4World/Country/*.cpp")
file(GLOB EU4_ARMY_SOURCES "${PROJECT_SOURCE_DIR}/EU4World/Army/*.cpp")
file(GLOB EU4_RELIGIONS_SOURCES "${PROJECT_SOURCE_DIR}/EU4World/Religions/*.cpp")
file(GLOB EU4_LOCALISATION_SOURCES "${PROJECT_SOURCE_DIR}/EU4World/Localisation/*.cpp")
set(COMMON_SOURCES "../common_items/CardinalToOrdinal.cpp")
set(COMMON_SOURCES ${COMMON_SOURCES} "../common_items/Color.cpp")
set(COMMON_SOURCES ${COMMON_SOURCES} "../common_items/CommonUtils.cpp")
set(COMMON_SOURCES ${COMMON_SOURCES} "../common_items/Date.cpp")
set(COMMON_SOURCES ${COMMON_SOURCES} "../common_items/LinuxUtils.cpp")
set(COMMON_SOURCES ${COMMON_SOURCES} "../common_items/Log.cpp")
set(COMMON_SOURCES ${COMMON_SOURCES} "../common_items/Object.cpp")
set(COMMON_SOURCES ${COMMON_SOURCES} "../common_items/newParser.cpp")
set(COMMON_SOURCES ${COMMON_SOURCES} "../common_items/ParserHelpers.cpp")
set(COMMON_SOURCES ${COMMON_SOURCES} "../common_items/StringUtils.cpp")

add_executable(EU4ToVic2 
	${MAIN_SOURCES}
	${HELPER_SOURCES}
	${VIC2WORLD_SOURCES}
	${V2POPS_SOURCES}
	${V2MAP_SOURCES}
	${V2COUNTRY_SOURCES}
	${V2RGORANDOMIZATION_SOURCES}
	${V2LEADER_SOURCES}
	${V2FACTORY_SOURCES}
	${MAPPER_SOURCES}
	${MAPPER_IDEAS_SOURCES}
	${MAPPER_PROVINCE_SOURCES}
	${MAPPER_BUILDINGS_SOURCES}
	${MAPPER_CULTUREGROUPS_SOURCES}
	${MAPPER_CK2TITLES_SOURCES}
	${MAPPER_COUNTRYMAPPINGS_SOURCES}
	${MAPPER_ADJACENCY_SOURCES}
	${MAPPER_GEOGRAPHY_SOURCES}
	${MAPPER_COLONIALTAGS_SOURCES}
	${MAPPER_COLONIALFLAGS_SOURCES}
	${MAPPER_CULTUREMAPPER_SOURCES}
	${MAPPER_FLAGCOLORS_SOURCES}
	${MAPPER_GOVERNMENTMAPPER_SOURCES}
	${MAPPER_MINORITYPOPS_SOURCES}
	${MAPPER_PARTYNAMES_SOURCES}
	${MAPPER_REGIMENTCOSTS_SOURCES}
	${MAPPER_RELIGIONMAPPER_SOURCES}
	${MAPPER_UNITTYPES_SOURCES}
	${MAPPER_STATEMAPPER_SOURCES}
	${MAPPER_BLOCKEDTECHSCHOOLS_SOURCES}
	${MAPPER_TECHSCHOOLS_SOURCES}
	${MAPPER_CULTURALUNIONS_SOURCES}
	${EU4_DIPLOMACY_SOURCES}
	${EU4_RELATIONS_SOURCES}
	${EU4_NATIONMERGER_SOURCES}
	${EU4_WORLD_SOURCES}
	${EU4_MODS_SOURCES}
	${EU4_HISTORY_SOURCES}
	${EU4_LEADER_SOURCES}
	${EU4_COLONIALREGIONS_SOURCES}
	${EU4_MODIFIERS_SOURCES}
	${EU4_PROVINCES_SOURCES}
	${EU4_COUNTRY_SOURCES}
	${EU4_ARMY_SOURCES}
	${EU4_REGIONS_SOURCES}
	${EU4_RELIGIONS_SOURCES}
	${EU4_LOCALISATION_SOURCES}
	${COMMON_SOURCES}
)
add_custom_command(TARGET EU4ToVic2 POST_BUILD WORKING_DIRECTORY ${CMAKE_SOURCE_DIR} COMMAND chmod u+x Copy_Files.sh)
add_custom_command(TARGET EU4ToVic2 POST_BUILD WORKING_DIRECTORY ${CMAKE_SOURCE_DIR} COMMAND ./Copy_Files.sh)
