cmake_minimum_required(VERSION 3.5)
#set(CMAKE_VERBOSE_MAKEFILE on)

project(EU4ToVic2)
#SET(CMAKE_CXX_COMPILER g++-8)
set(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/Source)
set(PROJECT_SOURCE_DIR ${CMAKE_SOURCE_DIR}/Source)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/Release-Linux)
set(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/Release-Linux)

add_compile_options("-std=c++17")
add_compile_options("-lstdc++fs")
add_compile_options("-O2")
add_compile_options("-pthread")

include_directories("../common_items")
include_directories("../ZipLib")
include_directories("${PROJECT_SOURCE_DIR}")

add_subdirectory(../ZipLib [binary_dir])

file(GLOB MAIN_SOURCES "${PROJECT_SOURCE_DIR}/*.cpp")
file(GLOB HELPER_SOURCES "${PROJECT_SOURCE_DIR}/Helpers/*.cpp")
file(GLOB HELPER_ELZIP_SOURCES "${PROJECT_SOURCE_DIR}/Helpers/elzip/*.cpp")
file(GLOB HELPER_MINIZIP_SOURCES "${PROJECT_SOURCE_DIR}/Helpers/elzip/minizip/*.c")
file(GLOB VIC2WORLD_SOURCES "${PROJECT_SOURCE_DIR}/V2World/*.cpp")
file(GLOB V2_ARMY_SOURCES "${PROJECT_SOURCE_DIR}/V2World/Army/*.cpp")
file(GLOB V2_OUTPUT_SOURCES "${PROJECT_SOURCE_DIR}/V2World/Output/*.cpp")
file(GLOB V2_LEADER_SOURCES "${PROJECT_SOURCE_DIR}/V2World/Leader/*.cpp")
file(GLOB V2_FACTORY_SOURCES "${PROJECT_SOURCE_DIR}/V2World/Factory/*.cpp")
file(GLOB V2_COUNTRY_SOURCES "${PROJECT_SOURCE_DIR}/V2World/Country/*.cpp")
file(GLOB V2_PARTY_SOURCES "${PROJECT_SOURCE_DIR}/V2World/Party/*.cpp")
file(GLOB V2_DIPLOMACY_SOURCES "${PROJECT_SOURCE_DIR}/V2World/Diplomacy/*.cpp")
file(GLOB V2_LOCALISATION_SOURCES "${PROJECT_SOURCE_DIR}/V2World/Localisation/*.cpp")
file(GLOB V2_REFORMS_SOURCES "${PROJECT_SOURCE_DIR}/V2World/Reforms/*.cpp")
file(GLOB V2_POP_SOURCES "${PROJECT_SOURCE_DIR}/V2World/Pop/*.cpp")
file(GLOB V2_PROVINCE_SOURCES "${PROJECT_SOURCE_DIR}/V2World/Province/*.cpp")
file(GLOB V2_STATE_SOURCES "${PROJECT_SOURCE_DIR}/V2World/State/*.cpp")
file(GLOB V2_FLAGS_SOURCES "${PROJECT_SOURCE_DIR}/V2World/Flags/*.cpp")
file(GLOB V2_COUNTRY_SOURCES "${PROJECT_SOURCE_DIR}/V2World/Country/*.cpp")
file(GLOB V2_MAPPINGCHECKER_SOURCES "${PROJECT_SOURCE_DIR}/V2World/MappingChecker/*.cpp")
file(GLOB V2_WAR_SOURCES "${PROJECT_SOURCE_DIR}/V2World/War/*.cpp")
file(GLOB MAPPER_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/*.cpp")
file(GLOB MAPPER_IDEAEFFECTS_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/IdeaEffects/*.cpp")
file(GLOB MAPPER_TECHGROUPS_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/TechGroups/*.cpp")
file(GLOB MAPPER_FACTORYTECHS_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/FactoryTechs/*.cpp")
file(GLOB MAPPER_FACTORYINVENTIONS_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/FactoryInventions/*.cpp")
file(GLOB MAPPER_FACTORYTYPES_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/FactoryTypes/*.cpp")
file(GLOB MAPPER_FACTORYCOUNTS_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/FactoryCounts/*.cpp")
file(GLOB MAPPER_PROVINCE_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/ProvinceMappings/*.cpp")
file(GLOB MAPPER_BUILDINGS_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/Buildings/*.cpp")
file(GLOB MAPPER_CULTUREGROUPS_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/CultureGroups/*.cpp")
file(GLOB MAPPER_CK2TITLES_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/CK2Titles/*.cpp")
file(GLOB MAPPER_COUNTRYMAPPINGS_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/CountryMappings/*.cpp")
file(GLOB MAPPER_ADJACENCY_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/Adjacency/*.cpp")
file(GLOB MAPPER_GEOGRAPHY_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/Geography/*.cpp")
file(GLOB MAPPER_COLONIALTAGS_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/ColonialTags/*.cpp")
file(GLOB MAPPER_COLONIALFLAGS_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/ColonialFlags/*.cpp")
file(GLOB MAPPER_CULTUREMAPPER_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/CultureMapper/*.cpp")
file(GLOB MAPPER_FLAGCOLORS_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/FlagColors/*.cpp")
file(GLOB MAPPER_GOVERNMENTMAPPER_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/GovernmentMapper/*.cpp")
file(GLOB MAPPER_MINORITYPOPS_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/MinorityPops/*.cpp")
file(GLOB MAPPER_PARTYNAMES_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/PartyNames/*.cpp")
file(GLOB MAPPER_PARTYTYPES_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/PartyTypes/*.cpp")
file(GLOB MAPPER_REGIMENTCOSTS_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/RegimentCosts/*.cpp")
file(GLOB MAPPER_RELIGIONMAPPER_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/ReligionMapper/*.cpp")
file(GLOB MAPPER_UNITTYPES_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/UnitTypes/*.cpp")
file(GLOB MAPPER_STATEMAPPER_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/StateMapper/*.cpp")
file(GLOB MAPPER_BLOCKEDTECHSCHOOLS_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/BlockedTechSchools/*.cpp")
file(GLOB MAPPER_TECHSCHOOLS_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/TechSchools/*.cpp")
file(GLOB MAPPER_CULTURALUNIONS_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/CulturalUnions/*.cpp")
file(GLOB MAPPER_POPS_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/Pops/*.cpp")
file(GLOB MAPPER_UNRELEASABLES_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/Unreleasables/*.cpp")
file(GLOB MAPPER_LEADERTRAITS_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/LeaderTraits/*.cpp")
file(GLOB MAPPER_NAVALBASES_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/NavalBases/*.cpp")
file(GLOB MAPPER_RGORANDOMIZATION_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/RGORandomization/*.cpp")
file(GLOB MAPPER_REGIONPROVINCES_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/RegionProvinces/*.cpp")
file(GLOB MAPPER_PORTPROVINCES_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/PortProvinces/*.cpp")
file(GLOB MAPPER_PROVINCEDETAILS_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/ProvinceDetails/*.cpp")
file(GLOB MAPPER_VERSIONPARSER_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/VersionParser/*.cpp")
file(GLOB MAPPER_AGREEMENTMAPPER_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/AgreementMapper/*.cpp")
file(GLOB MAPPER_WARGOALMAPPER_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/WarGoalMapper/*.cpp")
file(GLOB MAPPER_STARTINGTECH_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/StartingTechMapper/*.cpp")
file(GLOB MAPPER_STARTINGINVENTION_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/StartingInventionMapper/*.cpp")
file(GLOB MAPPER_SUPERGROUPMAPPER_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/SuperGroupMapper/*.cpp")
file(GLOB EU4_WORLD_SOURCES "${PROJECT_SOURCE_DIR}/EU4World/*.cpp")
file(GLOB EU4_COLONIALREGIONS_SOURCES "${PROJECT_SOURCE_DIR}/EU4World/ColonialRegions/*.cpp")
file(GLOB EU4_HISTORY_SOURCES "${PROJECT_SOURCE_DIR}/EU4World/History/*.cpp")
file(GLOB EU4_LEADER_SOURCES "${PROJECT_SOURCE_DIR}/EU4World/Leader/*.cpp")
file(GLOB EU4_RELATIONS_SOURCES "${PROJECT_SOURCE_DIR}/EU4World/Relations/*.cpp")
file(GLOB EU4_DIPLOMACY_SOURCES "${PROJECT_SOURCE_DIR}/EU4World/Diplomacy/*.cpp")
file(GLOB EU4_NATIONMERGER_SOURCES "${PROJECT_SOURCE_DIR}/EU4World/NationMerger/*.cpp")
file(GLOB EU4_MODS_SOURCES "${PROJECT_SOURCE_DIR}/EU4World/Mods/*.cpp")
file(GLOB EU4_MODIFIERS_SOURCES "${PROJECT_SOURCE_DIR}/EU4World/Modifiers/*.cpp")
file(GLOB EU4_PROVINCES_SOURCES "${PROJECT_SOURCE_DIR}/EU4World/Provinces/*.cpp")
file(GLOB EU4_REGIONS_SOURCES "${PROJECT_SOURCE_DIR}/EU4World/Regions/*.cpp")
file(GLOB EU4_COUNTRY_SOURCES "${PROJECT_SOURCE_DIR}/EU4World/Country/*.cpp")
file(GLOB EU4_ARMY_SOURCES "${PROJECT_SOURCE_DIR}/EU4World/Army/*.cpp")
file(GLOB EU4_RELIGIONS_SOURCES "${PROJECT_SOURCE_DIR}/EU4World/Religions/*.cpp")
file(GLOB EU4_LOCALISATION_SOURCES "${PROJECT_SOURCE_DIR}/EU4World/Localisation/*.cpp")
file(GLOB EU4_WARS_SOURCES "${PROJECT_SOURCE_DIR}/EU4World/Wars/*.cpp")
file(GLOB EU4_TRADEGOODS_SOURCES "${PROJECT_SOURCE_DIR}/EU4World/TradeGoods/*.cpp")
set(COMMON_SOURCES "../common_items/CardinalToOrdinal.cpp")
set(COMMON_SOURCES ${COMMON_SOURCES} "../common_items/Color.cpp")
set(COMMON_SOURCES ${COMMON_SOURCES} "../common_items/CommonUtils.cpp")
set(COMMON_SOURCES ${COMMON_SOURCES} "../common_items/Date.cpp")
set(COMMON_SOURCES ${COMMON_SOURCES} "../common_items/LinuxUtils.cpp")
set(COMMON_SOURCES ${COMMON_SOURCES} "../common_items/Log.cpp")
set(COMMON_SOURCES ${COMMON_SOURCES} "../common_items/Object.cpp")
set(COMMON_SOURCES ${COMMON_SOURCES} "../common_items/newParser.cpp")
set(COMMON_SOURCES ${COMMON_SOURCES} "../common_items/ParserHelpers.cpp")
set(COMMON_SOURCES ${COMMON_SOURCES} "../common_items/StringUtils.cpp")

add_executable(EU4ToVic2 
	${MAIN_SOURCES}
	${HELPER_SOURCES}
	${HELPER_ELZIP_SOURCES}
	${HELPER_MINIZIP_SOURCES}
	${VIC2WORLD_SOURCES}
	${V2_ARMY_SOURCES}
	${V2_COUNTRY_SOURCES}
	${V2_LEADER_SOURCES}
	${V2_FACTORY_SOURCES}
	${V2_PARTY_SOURCES}
	${V2_DIPLOMACY_SOURCES}
	${V2_OUTPUT_SOURCES}
	${V2_LOCALISATION_SOURCES}
	${V2_REFORMS_SOURCES}
	${V2_POP_SOURCES}
	${V2_PROVINCE_SOURCES}
	${V2_STATE_SOURCES}
	${V2_FLAGS_SOURCES}
	${V2_COUNTRY_SOURCES}
	${V2_MAPPINGCHECKER_SOURCES}
	${V2_WAR_SOURCES}
	${MAPPER_SOURCES}
	${MAPPER_IDEAEFFECTS_SOURCES}
	${MAPPER_TECHGROUPS_SOURCES}
	${MAPPER_FACTORYTECHS_SOURCES}
	${MAPPER_FACTORYINVENTIONS_SOURCES}
	${MAPPER_FACTORYTYPES_SOURCES}
	${MAPPER_FACTORYCOUNTS_SOURCES}
	${MAPPER_PROVINCE_SOURCES}
	${MAPPER_BUILDINGS_SOURCES}
	${MAPPER_CULTUREGROUPS_SOURCES}
	${MAPPER_CK2TITLES_SOURCES}
	${MAPPER_COUNTRYMAPPINGS_SOURCES}
	${MAPPER_ADJACENCY_SOURCES}
	${MAPPER_GEOGRAPHY_SOURCES}
	${MAPPER_COLONIALTAGS_SOURCES}
	${MAPPER_COLONIALFLAGS_SOURCES}
	${MAPPER_CULTUREMAPPER_SOURCES}
	${MAPPER_FLAGCOLORS_SOURCES}
	${MAPPER_GOVERNMENTMAPPER_SOURCES}
	${MAPPER_MINORITYPOPS_SOURCES}
	${MAPPER_PARTYNAMES_SOURCES}
	${MAPPER_PARTYTYPES_SOURCES}
	${MAPPER_REGIMENTCOSTS_SOURCES}
	${MAPPER_RELIGIONMAPPER_SOURCES}
	${MAPPER_UNITTYPES_SOURCES}
	${MAPPER_STATEMAPPER_SOURCES}
	${MAPPER_BLOCKEDTECHSCHOOLS_SOURCES}
	${MAPPER_TECHSCHOOLS_SOURCES}
	${MAPPER_CULTURALUNIONS_SOURCES}
	${MAPPER_POPS_SOURCES}
	${MAPPER_UNRELEASABLES_SOURCES}
	${MAPPER_LEADERTRAITS_SOURCES}
	${MAPPER_NAVALBASES_SOURCES}
	${MAPPER_RGORANDOMIZATION_SOURCES}
	${MAPPER_REGIONPROVINCES_SOURCES}
	${MAPPER_PORTPROVINCES_SOURCES}
	${MAPPER_PROVINCEDETAILS_SOURCES}
	${MAPPER_VERSIONPARSER_SOURCES}
	${MAPPER_AGREEMENTMAPPER_SOURCES}
	${MAPPER_WARGOALMAPPER_SOURCES}
	${MAPPER_STARTINGTECH_SOURCES}
	${MAPPER_STARTINGINVENTION_SOURCES}
	${MAPPER_SUPERGROUPMAPPER_SOURCES}
	${EU4_DIPLOMACY_SOURCES}
	${EU4_RELATIONS_SOURCES}
	${EU4_NATIONMERGER_SOURCES}
	${EU4_WORLD_SOURCES}
	${EU4_MODS_SOURCES}
	${EU4_HISTORY_SOURCES}
	${EU4_LEADER_SOURCES}
	${EU4_COLONIALREGIONS_SOURCES}
	${EU4_MODIFIERS_SOURCES}
	${EU4_PROVINCES_SOURCES}
	${EU4_COUNTRY_SOURCES}
	${EU4_ARMY_SOURCES}
	${EU4_REGIONS_SOURCES}
	${EU4_RELIGIONS_SOURCES}
	${EU4_LOCALISATION_SOURCES}
	${EU4_WARS_SOURCES}
	${EU4_TRADEGOODS_SOURCES}
	${COMMON_SOURCES}
)

target_link_libraries(EU4ToVic2 LINK_PUBLIC ZIPLIB stdc++fs)

add_custom_command(TARGET EU4ToVic2 POST_BUILD WORKING_DIRECTORY ${CMAKE_SOURCE_DIR} COMMAND chmod u+x Copy_Files.sh)
add_custom_command(TARGET EU4ToVic2 POST_BUILD WORKING_DIRECTORY ${CMAKE_SOURCE_DIR} COMMAND ./Copy_Files.sh)
